--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngui/auto-complete": "^0.16.0",
+    "angular-material-autocomplete-list": "^1.1.0",
     "core-js": "^2.4.1",
+    "md-autocomplete": "0.0.1-alpha.1",
+    "ng-auto-complete": "^2.7.14",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
