--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@ngui/auto-complete": "^0.16.0",
     "angular-material-autocomplete-list": "^1.1.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "md-autocomplete": "0.0.1-alpha.1",
     "ng-auto-complete": "^2.7.14",
+    "ng2-owl-carousel": "^0.1.15",
+    "ngx-owl-carousel": "^2.0.4",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.5.2",
+    "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
