--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@angular/router": "^5.0.0",
     "@ngui/auto-complete": "^0.16.0",
     "angular-material-autocomplete-list": "^1.1.0",
+    "angular2-datepicker": "^1.0.5",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "md-autocomplete": "0.0.1-alpha.1",
+    "mydatepicker": "^2.6.1",
     "ng-auto-complete": "^2.7.14",
+    "ng2-datepicker": "^2.2.4",
     "ng2-owl-carousel": "^0.1.15",
+    "ngx-bootstrap": "^2.0.2",
     "ngx-owl-carousel": "^2.0.4",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.5.2",
